[package]
name = "trunk-template"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = "0.19"
bdk = { version = "0.25.0", default-features = false, features = ["use-esplora-reqwest", "reqwest-default-tls"] }
getrandom = { version = "0.2", features = ["js"] }
log = "0.4.17"
wasm-logger = "0.2.0"
wasm-bindgen = "0.2.83"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.4"
web-sys = "0.3.60"
gloo-storage = "0.2"
